@@ -1,3 +1,12 @@
+2006-12-29  George Staikos  <staikos@kde.org>
+
+        Reviewed by Olliej.
+
+        Make redirects work properly.  Sites will thank us for this. :-)
+
+        * platform/network/qt/ResourceHandleManagerQt.cpp:
+        (WebCore::ResourceHandleManager::receivedResponse):
+
 2006-12-28  George Staikos  <staikos@kde.org>
 
         Reviewed by Olliej.
